web-1: got site running and some content updated.

--- a/.env
+++ b/.env
@@ -1,1 +1,17 @@
-IS_TEMPLATE=true
+IS_TEMPLATE=false
+
+# For blog views and guestbook
+DATABASE_URL="mysql://dvxgckush5enx0242w5z:pscale_pw_eBBTRcgzRuoQiTrMttyLGIHVHrmstMDEf8LnK05ERKB@aws.connect.psdb.cloud/tech-portfolio?ssl={"rejectUnauthorized":true}"
+
+## Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
+AUTH_SECRET="r3o9v65utjq98QosDMbC17xvOUf5bBeclZmzFKFAbEg="
+
+## Create a GitHub OAuth app here: https://docs.github.com/en/apps/oauth-apps/building-oauth-apps/creating-an-oauth-app
+OAUTH_CLIENT_KEY=
+OAUTH_CLIENT_SECRET=
+
+## Support OAuth login on preview deployments, see: https://authjs.dev/guides/basics/deployment#securing-a-preview-deployment
+AUTH_REDIRECT_PROXY_URL=https://lebroncode.com/api/auth
+
+# For redirects
+EDGE_CONFIG=
